bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: ner-logistics
    labels:
        com.docker.compose.project: ner-logistics
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: ner-logistics
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: ner-logistics
                com.docker.compose.service: backend
                com.docker.compose.network.ner_network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: ner-backend
                  image: ner-logistics-backend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: backend-8000
                      containerPort: 8000
