bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: ner-logistics
    labels:
        com.docker.compose.project: ner-logistics
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: ner-logistics
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: ner-logistics
                com.docker.compose.service: frontend
                com.docker.compose.network.ner_network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: ner-frontend
                  image: ner-logistics-frontend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-3000
                      containerPort: 3000
