bridge/base/redis-deployment.yaml
#! redis-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: ner-logistics
    labels:
        com.docker.compose.project: ner-logistics
        com.docker.compose.service: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: ner-logistics
            com.docker.compose.service: redis
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: ner-logistics
                com.docker.compose.service: redis
                com.docker.compose.network.ner_network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: ner-redis
                  image: redis:alpine
                  imagePullPolicy: IfNotPresent
                  args:
                    - redis-server
                    - --save
                    - 60
                    - 1
                    - --loglevel
                    - warning
                    - --maxmemory
                    - 512mb
                    - --maxmemory-policy
                    - allkeys-lru
                  livenessProbe:
                    exec:
                        command: [redis-cli ping]
                    periodSeconds: 10
                    timeoutSeconds: 3
                    failureThreshold: 5
                  ports:
                    - name: redis-6379
                      containerPort: 6379
                  volumeMounts:
                    - name: data
                      mountPath: /data
            volumes:
                - name: data
                  persistentVolumeClaim:
                    claimName: redis-redis-data
