bridge/base/ner_network-network-policy.yaml
#! ner_network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: ner-network-network-policy
    namespace: ner-logistics
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.ner_network: "true"
    policyTypes:
        - Ingress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.ner_network: "true"
